--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,9 @@
 /* Base Application Styles */
-body {
+html, body {
   color: #fff;
-  background: #7BD1EE;
+  background-color: #f7f7f7;
   font-family: 'Roboto', sans-serif;
   margin: 0px !important;
+  width: 100%;
+  height: 100%;
 }
