--- a/src/styles/Noteboard.css
+++ b/src/styles/Noteboard.css
@@ -20,3 +20,18 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
+@media (max-width: 700px) {
+  .flipButton {
+    bottom: 3%;
+    top: inherit !important;
+  }
+}
+
+.floatingActionButton {
+  z-index: 100;
+  right: 3%;
+  top: 67px;
+  position: fixed;
+  composes: flipButton;
+}
