Bug fixes. Adding board title and last post time. Switching to Icon buttons for toggles. Adding menu button for tag filters.

--- a/src/styles/Noteboard.css
+++ b/src/styles/Noteboard.css
@@ -36,3 +36,13 @@
   position: fixed;
   composes: flipButton;
 }
+
+.boardName {
+  font-size: 1.5em;
+  font-weight: 600;
+  color: #979797;
+}
+
+.lastPost {
+  color: #dad4d4;
+}
