--- a/src/styles/BoardSideBar.css
+++ b/src/styles/BoardSideBar.css
@@ -28,9 +28,9 @@
 
 .boardListTitle {
   font-size: 2em;
-  text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 800;
+  padding-left: 20px;
 }
 
 .noBoard {
@@ -53,8 +53,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: #cae8fb;
 }
 
 .link {
-  color: white;
+  color: #cae8fb;
 }
